# hexconverter

./: .clang-format  CMakeLists.txt  README.md  build.sh  run.sh
src/: CMakeLists.txt  main.cpp
